Agartala/v0.1.0/CORE/documentation/Installation Guide.md
![image](https://github.com/user-attachments/assets/2f974c51-41aa-4d95-b88a-84a2eff6138f)﻿
# IOS MCN v0.1.0 Agartala Release Installation Guide: IOSMCN-Core v0.1

# Introduction

The core software for the India Open Source for Mobile Communication Network (IOS-MCN) is based on open-source SD-Core. In this document, includes the installation and configurations for making the platform up and running for the integration with RAN and UPF. This includes emulated RAN test with built in tool.

#  Purpose and Audience

This document is for installing and configuring the IOS-MCN core software on the server. It can be connected to RAN, attach UEs and integrate with UPF.

#  Installation methods

The installation can be proceeded with this documentation and the core can get from IOS-MCN git repository.  The details of each step are given on next section.

#  Installation

##  Hardware Requirements

The IOSMCN-Core installation requires the following prerequisites

- 4 Cores

- 16 GB RAM

- 40 GB Disk Storage

##  Software Prerequisites

- Ubuntu 22.04 LTS Operating system

- Git

- Curl

- Make

- Net tools

- Netplan

- Ansible

- Python3

- Docker.io
  
- openssh-server

- Ethtool

##   Prerequisite Installation

Login to the Ubuntu 22.04.5 LTS desktop and take a terminal. The internet access is required for the machine.

Update the repository by the command

_sudo apt update_

After the successful completion of repository update start installing the required tools.

_sudo apt install git curl make net-tools pipx python3-venv docker.io_

_pipx install --include-deps ansible_

_pipx ensurepath_

_sudo apt install sshpass netplan.io iptables openssh-server ethtool_

##  Prerequisite Environment

###  Firewall status

Verify the firewall is inactive on the system using the command

_sudo ufw status_

If the firewall is active, disable the firewall using the command

_sudo ufw disable_

###  Networkd status

Verify the _systemd-networkd_ status for the network configuration using the command

_systemctl status systemd-networkd.service_

###  Disable Generic receive offload (GRO)

Find the interface from the _ifconfig_ command and input the interface name to the following command

_sudo ethtool -K \<core-interface\> gro off_

##  Installation of IOS-MCN Core

###  Download core image

create a directory for IOSMCN-Core in home directory as per the following commands

_cd_

_mkdir IOSMCN-Core_

_cd IOSMCN-Core_

Download file: [iosmcn.agartala.v0.1.0.core.images.tar.gz](../release-images/iosmcn.agartala.v0.1.0.core.images.tar.gz) to the directory

_tar -xvzf iosmcn.agartala.v0.1.0.core.images.tar.gz_

_cd iosmcn.agartala.v0.1.0.core.images/IOSMCN-CoreDpm_

This brings up a Kubernetes cluster, deploy a 5G version of IOSMCN-Core on that cluster, and then connect that IOSMCN-Core to either an emulated 5G RAN or physical RAN.

###  Target Parameter Settings

Open the hosts.ini file

_vi hosts.ini_

Update IP address, username and password of the system

eg.,

_node1  ansible_host=10.176.26.86 ansible_user=ios5gn ansible_password=ios5gn ansible_sudo_pass=ios5gn_

Open vars/main.yml

_vi  vars/main.yml_

Update data_iface name on _core_:

eg.,

_data_iface: ens3_

Update data_iface name on _gnbsim:router:_

_gnbsim:_

_router:_

_data_iface: ens3_

Update IP address of the system

_amf:_

_ip: "10.176.26.86"_

Open _locale_ file

_sudo vi /etc/default/locale_

eg.,

_#  File generated by update-locale_

_LANG="en_IN.UTF-8"_

_LANGUAGE="en_IN:en"_

Reboot the system for updating the locale

![Parameter settings in var/main.yml](./images/install/fig1-parameters.png)

Figure 1: Parameter settings in var/main.yml

###   Install Kubernetes

Start installation with the command

_make aether-k8s-install_

This may take several minutes to complete the installation. On its completion, verify the installation status by the command

_kubectl get pods --all-namespaces_

The successful output looks like


![Output of Kubernetes installation](./images/install/fig2-output-kubernetes.png)

Figure 2: Output of Kubernetes installation

###  Pre-Configuration for IOSMCN-Core

Verify the netpan is configured with ip, gateway and dns address.

_nano /etc/netplan/00-installer-config.yaml_

eg.,

_network:_

_version: 2_

_ethernets:_

_ens3:_

_addresses:_

_- 10.176.26.86/23_

_gateway4: 10.176.26.1_

_nameservers:_

_addresses:_

_- 10.176.0.11_

If any change on the configuration, execute the command

_sudo netplan apply_

###  Configure IOSMCN-Core

Modify the subscribers block of the omec-sub-provision section in file _deps/5gc/roles/core/templates/iosmcn-5g-values.yaml_ to record the IMSI, OPc, and Key values configured onto your SIM cards. For example, the following code block adds IMSIs between 001010000000001 and 001010000000003


![](./images/install/fig3-config-sd-core.png)

Further down in the same omec-sub-provision section you will find two other blocks that also need to be edited. The first, device-groups, assigns IMSIs to _Device Groups_. You will need to reenter the individual IMSIs from the subscribers block that will be part of the device-group. Also, update the DNS.


![](./images/install/fig4-config-sd-core.png)

The second block, network-slices, sets various parameters associated with the _Slices_ that connect device groups to applications. Here, you will need to reenter the PLMN information

![](./images/install/fig5-config-sd-core.png)

###  Install IOSMCN-Core

Initiate the installation by the command

_make aether-5gc-install_

The successful outcome shall be verified using the following command

_kubectl get pods -n iosmcn_


![](./images/install/fig6-install-sd-core.png)

_Figure 3: Success state of IOSMCN-Core installation_


##  Install Management Application

###  Install Aether AMP

_make aether-amp-install_

If an error occurs, try to install again

###  Access Management Interface

Access the dashboards for Aether's Runtime Control system and Aether's Monitoring system using the following URL:

http://<server_ip>:31194

Access the Grafana using the URL

http://<server_ip>:30950

##  Add Route in gNB

In core machine, run following command to get the AMF service IP:

_kubectl get svc -n iosmcn_

![](./images/install/fig17.png)

Add route in gNB machine to AMF service IP:

_sudo ip route add \<amf-service-ip\> via <core_ip>_

Add route in gNB machine to UPF:

_sudo ip route add 192.168.252.0/24 via <core_ip>_

##  Verify Network

###  Check core and access are properly configured outside the container

There are two bridges that connect the physical interface with the UPF container. The access bridge connects the UPF downstream to the RAN (this corresponds to 3GPP’s N3 interface) and is assigned IP subnet 192.168.252.0/24 . The core bridge connects the UPF upstream to the Internet (this corresponds to 3GPP’s N6 interface) and is assigned IP subnet 192.168.250.0/24 .

![](./images/install/fig8-verify-network.png)

The above output from ip shows the two interfaces visible to the server, but running outside the container.

###  Check core and access are properly configured inside the container

kubectl can be used to see what’s running inside the UPF, where bessd is the name of the container image that implements the UPF, and access and core are the last two interfaces shown below:

_kubectl -n iosmcn exec -ti upf-0 bessd -- ip addr_

![](./images/install/fig9-.png)

When packets flowing upstream from the gNB arrive on the server’s physical interface, they need to be forwarded over the access interface. This is done by having the following kernel route installed, which should be the case if your Aether installation was successful.

_route -n | grep "Iface\|access"_

![](./images/install/fig10-.png)

Within the UPF, the correct behavior is to forward packets between the access and core

interfaces. Upstream packets arriving on the access interface have their GTP headers

removed and the raw IP packets are forwarded to the core interface. The routes inside the UPF’s bessd container will look something like this:

_kubectl -n iosmcn exec -ti upf-0 bessd -- ip route_

![](./images/install/fig11-.png)

_route -n | grep "Iface\|core"_

![](./images/install/fig12.png)


The first rule above matches packets to the UEs on the 172.250.0.0/16 subnet. The next hop for these packets is the core IP address inside the UPF. The second rule says that next hop address is reachable on the core interface outside the UPF. As a result, the downstream packets arrive in the UPF where they are GTP-encapsulated with the IP address of the gNB.

Note that if you are not finding access and core interfaces outside the UPF, the following commands can be used to create these two interfaces manually (again using our running example for the physical ethernet interface):

_ip link add core link ens3 type macvlan mode bridge 192.168.250.3_

_ip link add access link ens3 type macvlan mode bridge 192.168.252.3_

Note that if you are find access and core interfaces outside the UPF, but route not generated the following commands can be used to create these two routes manually (again using our running example for the physical ethernet interface):

_sudo ip route add 192.168.252.0/24 dev access_

_sudo ip route add 192.168.250.0/24 dev core_

###  Packet Traces

Packet traces are the best way to diagnose your deployment, and the most helpful traces you can capture are shown in the following commands. You can run these on the Aether server, where we use our example ens18 interface for illustrative purposes:

_sudo tcpdump -i any sctp -w sctp-test.pcap_

_sudo tcpdump -i ens18 port 2152 -w gtp-outside.pcap_

_sudo tcpdump -i access port 2152 -w gtp-inside.pcap_

_sudo tcpdump -i core net 172.250.0.0/16 -w n6-inside.pcap_

_sudo tcpdump -i ens18 net 172.250.0.0/16 -w n6-outside.pcap_

If the gtp-outside.pcap has packets and the gtp-inside.pcap is empty (no packets captured), you may run the following commands to make sure packets are forwarded from the ens18 interface to the access interface and vice versa:

_sudo iptables -A FORWARD -i ens18 -o access -j ACCEPT_

_sudo iptables -A FORWARD -i access -o ens18 -j ACCEPT_

##   Routing Configuration inside UPF pod

###  Enter the UPF Pod

To enter the UPF pod, execute the following commands:

_kubectl exec -it upf-0 -n iosmcn -- /bin/bash_

Once inside the pod, verify the network interfaces:

_ip addr_

Ensure the following four interfaces are created: lo, eth0, access, and core.

![](./images/install/fig13.png)

####  Verify Routing Table

Check the routing table to ensure it matches the expected configuration

_ip r_

![](./images/install/fig14.png)

####  Ping test

![](./images/install/fig15.png)

####  Check and Update ARP Entries

![](./images/install/fig16.png)

Ensure that the ARP entries for access and core interfaces have the correct MAC addresses. If the MAC addresses do not match, update them as follows:

_sudo arp -s 192.168.252.3 \<mac-address-access\>_

_sudo arp -s 192.168.250.3 \<mac-address-core\>_

Replace \<mac-address-access\> and \<mac-address-core\> with the actual MAC addresses of the access and core interfaces respectively [Inside UPF-POD].

## Related Artifacts & links

| **Document Name** | **Purpose** | **Link** |
|--|--|--|
| Developer Guide | Guide for IOSMCN-Core developers | [Click Here](./Developer%20Guide.md)|
| User Guide | Quick user guide | [Click Here](./User%20Guide.md)  |
| API Guide | API guide | [Click here](./API%20Guide.md)|
| Troubleshooting Guide  | Troubleshooting guide for IOSMCN-Core | [Click here](./Troubleshooting%20Guide.md)|
| Installation Guide | Installation of IOSMCN-Core | [Click here](./Installation%20Guide.md) |
